Fix first notification taking a long time to appear and causing the app to freeze