@@ -117,6 +117,7 @@ jpackage {
             '--add-exports=javafx.graphics/com.sun.glass.ui=nl.jixxed.eliteodysseymaterials',
             '--add-exports=javafx.graphics/com.sun.javafx.tk=nl.jixxed.eliteodysseymaterials',
             '--add-opens=javafx.graphics/javafx.scene.layout=nl.jixxed.eliteodysseymaterials',
+            '--add-opens=org.controlsfx.controls/org.controlsfx.control=nl.jixxed.eliteodysseymaterials',
             '--enable-preview'
     ]
 }
@@ -220,6 +221,7 @@ jlink {
                 '--add-exports=javafx.graphics/com.sun.glass.ui=nl.jixxed.eliteodysseymaterials',
                 '--add-exports=javafx.graphics/com.sun.javafx.tk=nl.jixxed.eliteodysseymaterials',
                 '--add-opens=javafx.graphics/javafx.scene.layout=nl.jixxed.eliteodysseymaterials',
+                '--add-opens=org.controlsfx.controls/org.controlsfx.control=nl.jixxed.eliteodysseymaterials',
                 '--enable-preview'
         ]
     }
@@ -476,6 +478,7 @@ run {
 '--add-exports=javafx.controls/com.sun.javafx.scene.control=nl.jixxed.eliteodysseymaterials',
 '--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls',
 '--add-exports=jdk.naming.dns/com.sun.jndi.dns=java.naming',
+'--add-opens=org.controlsfx.controls/org.controlsfx.control=nl.jixxed.eliteodysseymaterials',
 '--add-opens=javafx.graphics/javafx.scene.layout=nl.jixxed.eliteodysseymaterials',//TODO removeme. when 25.0.3 or later fixes the flowpane https://bugs.openjdk.org/browse/JDK-8377153
 '--enable-preview'
     ]
